Change size of scrollbar Fix no delay between cotnainer and dropdown

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,7 @@
 
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
 }
 
 /* Track */
